Fix long title overflow on narrow screens

--- a/dashboard/src/styles/main.scss
+++ b/dashboard/src/styles/main.scss
@@ -30,7 +30,6 @@ a:not(.btn),
   white-space: break-spaces;
 }
 
-.flex-truncate {
-  @extend .text-truncate;
+.min-w-0 {
   min-width: 0;
 }
